[project]
name = "pgx"
dynamic = ["version", "authors", "dependencies", "classifiers", "keywords", "readme"]

[tool.setuptools.dynamic]
version = {attr = "pgx.__version__"}

[tool.black]
line-length = 120

# https://black.readthedocs.io/en/stable/compatible_configs.html
[flake8]
max-line-length = 120
max-complexity = 18

# https://black.readthedocs.io/en/stable/compatible_configs.html
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
